<resources>
    <string name="app_name">Trip For Trip</string>
    <string name="key_placesAPI">AIzaSyCWpaB6khEfkctIRhl1VXhU0rWH8Z1n2Es</string>
    <string name="web_application_id">hvieO-l-PPEYGSXBNjq_462o</string>


    <!--_00_Main-->
    <string name="text_myJourney">我的旅程</string>
    <string name="text_Scene">景點瀏覽</string>
    <string name="text_Bag">我的行李</string>
    <string name="text_EmergencyButton">緊急按鈕</string>
    <string name="text_exJourney">歷史旅程</string>
    <string name="text_Share">分享ＡＰＰ</string>
    <string name="text_About">關於我</string>
    <string name="text_Map">ＭＡＰ</string>
    <string name="text_Settings">會員專區</string>
    <string name="text_UserName">Bruce Lee</string>
    <string name="text_Email">gmail.com</string>
    <string name="text_Open">Open</string>
    <string name="text_Close">Close</string>
    <string name="text_ShouldGrant">Permission to read from external storage should be granted</string>

    <!--_01_MyJourney-->
    <string name="title_activity_journey">JourneyActivity</string>


    <!--_02_SpotSearch-->
    <string name="Setting">取得設定資訊中....</string>
    <string name="Loc">尚未取得定位資訊</string>
    <string name="bt">手機定位功能設定</string>
    <string name="lan">輸入緯度：</string>
    <string name="lon">輸入經度：</string>
    <string name="etlon">例如: 121.52</string>
    <string name="etlan">例如: 25.03</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv1">經緯度</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="searchSpot">以景點搜尋</string>
    <string name="searchCountry">國家/縣市</string>

    <array name="places_type">
        <item>全部</item>
        <item>住宿/飯店</item>
        <item>景點</item>
        <item>餐廳</item>
        <item>娛樂</item>
        <item>交通運輸</item>
        <item>購物</item>
    </array>

    <array name="places_city">
        <item>未選擇</item>
        <item>基隆市</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>台中市</item>
        <item>南投縣</item>
        <item>彰化縣</item>
        <item>雲林線</item>
        <item>嘉義縣</item>
        <item>台南市</item>
        <item>高雄市</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>台東縣</item>
    </array>

    <!--_03_Member-->

    <!--_04_Member-->
    <!--_05_Member-->


    <!--_06_Member-->
    <string name="pref_name">User</string>
    <string name="pref_uid">uid</string>
    <string name="pref_email">email</string>
    <string name="pref_password">password</string>
    <string name="wrongPasswd">密碼錯誤</string>
    <string name="again">重新輸入</string>
    <string name="lostPasswd">忘記密碼</string>
    <string name="autocomplete_hint">輸入景點或地址</string>
    <string name="place_details">place_details</string>


</resources>
